; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-pipe-connect-prepare.c_connect_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-pipe-connect-prepare.c_connect_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UV_ENOENT = common dso_local global i32 0, align 4
@connect_cb_called = common dso_local global i32 0, align 4
@prepare_handle = common dso_local global i32 0, align 4
@close_cb = common dso_local global i32 0, align 4
@pipe_handle = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @connect_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @connect_cb(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @UV_ENOENT, align 4
  %7 = icmp eq i32 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @ASSERT(i32 %8)
  %10 = load i32, i32* @connect_cb_called, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* @connect_cb_called, align 4
  %12 = load i32, i32* @close_cb, align 4
  %13 = call i32 @uv_close(i32* @prepare_handle, i32 %12)
  %14 = load i32, i32* @close_cb, align 4
  %15 = call i32 @uv_close(i32* @pipe_handle, i32 %14)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
